# OCR

./: .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  Segment.sln  main.cpp
Segment/: ChunkArray.cpp  ChunkArray.h  DP.cpp  DP.h  EditDistance.cpp  EditDistance.h  OCR.cpp  Segment.cpp  Segment.vcxproj  Segment.vcxproj.filters  SuggestItem.cpp  SuggestItem.h  SuggestionStage.cpp  SuggestionStage.h  SymSpellCheck.cpp  SymSpellCheck.h  SymSpellCheckDemo.cpp  SymSpellCheckDemo.h  TM.cpp  TM.h  VTM.cpp  VTM.h  short.txt
enc_temp_folder/9bc4204389127526939e9c247af423a/: SymSpellCheck.cpp
headfile/: SymSpellCheck.h
src/: BKtree.cpp  CMakeLists.txt  ChunkArray.cpp  EditDistance.cpp  TM.cpp  stdafx.cpp
