cmake_minimum_required(VERSION 2.8)
project(Linux-OCR)
set(DEMO_SRC "main.cpp" include/Transfer.h src/Transfer.cpp)
set(INCLUDE "include")
set(SOURCE "src")
file(GLOB INCL "include/*.h")
file(GLOB SRC "src/*.cpp")
include_directories(${INCLUDE} ${SOURCE})
add_executable(Main ${DEMO_SRC} ${INCL} ${SRC})
